k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: safeyatri
  labels:
    name: safeyatri
    app: safeyatri
